--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>AlwaysPrune — Rika's digital garden</title>
+<title> — Rika's digital garden</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -60,7 +60,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 
 <!--~~ Static styles ~~-->
 <div id="styleArea">
-<style data-tiddler-created="20200914230316029" data-tiddler-modified="20200914230321729" data-tiddler-title="$:/boot/boot.css" data-tiddler-type="text/css" type="text/css">/*
+<style data-tiddler-created="20200914230316029" data-tiddler-modified="20200914230418737" data-tiddler-title="$:/boot/boot.css" data-tiddler-type="text/css" type="text/css">/*
 Basic styles used before we boot up the parsing engine
 */
 
@@ -182,6 +182,10 @@ Error message and password prompt
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/image-picker/system-434969431</li>
+
+<li>$:/state/plugin-info-334910430-$:/core---1812962263</li>
 
 <li>$:/state/sidebar</li>
 
@@ -9917,8 +9921,14 @@ display:block;
 <div created="20200912202316996" modified="20200912202319257" title="$:/SiteSubtitle">
 <pre>Rika's digital garden</pre>
 </div>
-<div created="20200912202304002" modified="20200912202315860" title="$:/SiteTitle">
-<pre>AlwaysPrune</pre>
+<div created="20200912202304002" modified="20200914230653592" title="$:/SiteTitle">
+<pre>[img[$:/languages/en-GB/icon]]</pre>
+</div>
+<div created="20200914230651269" modified="20200914230651269" title="$:/state/image-picker/system-434969431">
+<pre>show</pre>
+</div>
+<div created="20200914230457087" modified="20200914230457087" title="$:/state/plugin-info-334910430-$:/core---1812962263">
+<pre>contents</pre>
 </div>
 <div created="20200914224531677" modified="20200914230038614" title="$:/state/sidebar">
 <pre>yes</pre>
@@ -9938,17 +9948,17 @@ display:block;
 <div created="20200914224626995" modified="20200914225608679" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20200912203313359" modified="20200914230245874" title="$:/state/tab/sidebar--595412856">
+<div created="20200912203313359" modified="20200914230604372" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200914223644731" list="$:/boot/boot.css test [[About me]]" modified="20200914230248376" title="$:/StoryList">
+<div created="20200914223644731" list="$:/SiteTitle $:/palette $:/AdvancedSearch $:/core $:/config/Toolbar/Text test [[About me]]" modified="20200914230631358" title="$:/StoryList">
 <pre></pre>
 </div>
-<div created="20200914225541236" modified="20200914225549691" title="$:/temp/advancedsearch">
-<pre></pre>
+<div created="20200914225541236" modified="20200914230446147" title="$:/temp/advancedsearch">
+<pre>$:/core/templates/static.tiddler.html </pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
 <pre>{
@@ -10955,7 +10965,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div author="JeremyRuston" core-version="&gt;=5.0.0" created="20200914224555431" dependents="" description="Basic theme" modified="20200914224555431" name="Vanilla" original-plugin-type="theme" original-tags="" original-title="$:/themes/tiddlywiki/vanilla" original-type="application/json" plugin-priority="0" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/themes/tiddlywiki/vanilla" type="text/vnd.tiddlywiki" version="5.1.22">
 <pre></pre>
 </div>
-<div created="20200914224644992" modified="20200914230228875" title="$:/temp/search">
+<div created="20200914224644992" modified="20200914230510142" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20200914224555408" modified="20200914224555408" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
