--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
   <title>AlwaysPrune</title>
-  <link href="static.css" rel="stylesheet">
+  <link href="/static.css" rel="stylesheet">
+  <link href="/wike2.html">
 </head>
